--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -5,29 +5,35 @@
     android:layout_height="match_parent"
     tools:context=".CalenderFragment">
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="500dp"
-            android:textSize="50sp"
-            android:text="@string/calender" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="500dp"
-            android:textSize="50sp"
-            android:text="@string/calender" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:textSize="50sp"
+                android:text="@string/calender" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="500dp"
-            android:textSize="50sp"
-            android:text="@string/calender" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:textSize="50sp"
+                android:text="@string/calender" />
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:textSize="50sp"
+                android:text="@string/calender" />
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 </FrameLayout>
