--- a/app/src/main/res/layout/fragment_medicines.xml
+++ b/app/src/main/res/layout/fragment_medicines.xml
@@ -1,39 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MedicinesFragment">
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
+        <FrameLayout
+            android:id="@+id/medicines_reminder_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            >
 
-            <TextView
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/medicines_container"
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
-                android:textSize="50sp"
-                android:text="@string/medicines" />
+                android:layout_height="wrap_content" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="500dp"
-                android:textSize="50sp"
-                android:text="@string/medicines" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="500dp"
-                android:textSize="50sp"
-                android:text="@string/medicines" />
+        </androidx.core.widget.NestedScrollView>
 
-        </LinearLayout>
+    </LinearLayout>
 
-    </androidx.core.widget.NestedScrollView>
 
-</FrameLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/medicines_add_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:tint="@color/colorDarkBackground"
+        android:src="@drawable/ic_plus_solid" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
