--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -32,7 +32,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:text="@string/loading"
+        android:text="@string/app_name"
         android:textColor="@color/colorDarkBackground"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
