--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".LoadingActivity">
+    tools:context=".activities.loading.LoadingActivity">
 
     <ImageView
         android:id="@+id/loading_icon"
