--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MedicinesFragment">
+    tools:context=".activities.home.MedicinesFragment">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
