--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -75,6 +75,7 @@
                     android:layout_height="wrap_content"
                     android:text="Dr. Palony Almony"
                     android:hint="Name"
+                    android:inputType="textPersonName"
                     android:visibility="gone"
                     />
 
@@ -99,6 +100,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:hint="Notes, like activity times and expertise.."
+                android:inputType="textMultiLine"
                 android:text="Family doctor. works on sundays and mondays. Don't call on saturdays."
                 android:visibility="gone"
                 />
@@ -157,6 +159,7 @@
                     android:layout_height="wrap_content"
                     android:text="+9722222222"
                     android:hint="Phone number"
+                    android:inputType="phone"
                     android:visibility="gone"
                     />
 
@@ -197,6 +200,7 @@
                     android:layout_height="wrap_content"
                     android:text="+9722222222"
                     android:hint="Email address"
+                    android:inputType="textEmailAddress"
                     android:visibility="gone"
                     />
 
