- added the option to email doctor by clicking the email container

--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -124,11 +124,12 @@
                 />
 
             <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="2dp"
-            >
+                android:id="@+id/doctor_phone_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="24dp"
@@ -136,42 +137,40 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="15dp"
                     android:layout_marginBottom="10dp"
-                    android:clickable="true"
-                    android:onClick="callDoctor"
+                    android:clickable="false"
                     android:src="@drawable/ic_phone"
                     android:tint="@color/colorTextTextDark"
                     android:tintMode="src_in" />
 
                 <TextView
                     android:id="@+id/doctor_phone_number"
-                    android:textSize="18sp"
-                    android:textColor="@color/colorTextTextDark"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="7dp"
                     android:text="+9722222222"
-                    />
+                    android:textColor="@color/colorTextTextDark"
+                    android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/doctor_phone_number_et"
-                    android:textSize="18sp"
-                    android:textColor="@color/colorTextTextDark"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="+9722222222"
                     android:hint="Phone number"
                     android:inputType="phone"
-                    android:visibility="gone"
-                    />
+                    android:text="+9722222222"
+                    android:textColor="@color/colorTextTextDark"
+                    android:textSize="18sp"
+                    android:visibility="gone" />
 
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/doctor_email_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginBottom="2dp"
-                >
+                android:background="?android:attr/selectableItemBackground"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="24dp"
@@ -185,25 +184,23 @@
 
                 <TextView
                     android:id="@+id/doctor_email"
-                    android:textSize="18sp"
-                    android:textColor="@color/colorTextTextDark"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="7dp"
                     android:text="+9722222222"
-                    />
+                    android:textColor="@color/colorTextTextDark"
+                    android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/doctor_email_et"
-                    android:textSize="18sp"
-                    android:textColor="@color/colorTextTextDark"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="+9722222222"
                     android:hint="Email address"
                     android:inputType="textEmailAddress"
-                    android:visibility="gone"
-                    />
+                    android:text="+9722222222"
+                    android:textColor="@color/colorTextTextDark"
+                    android:textSize="18sp"
+                    android:visibility="gone" />
 
             </LinearLayout>
 
