--- a/app/src/main/res/layout/activity_search_medicine.xml
+++ b/app/src/main/res/layout/activity_search_medicine.xml
@@ -111,12 +111,13 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <View
-        android:id="@+id/camera_view"
+
+    <FrameLayout
+        android:id="@+id/camera_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorAccent"
+        android:background="@color/cardview_dark_background"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
