--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -114,14 +114,14 @@
                 />
 
             <TextView
+                android:id="@+id/doctor_contact_info_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@color/colorTextTextDark"
-                android:text="Contact Info:"
                 android:layout_marginBottom="5dp"
-                />
+                android:text="Contact Info:"
+                android:textColor="@color/colorTextTextDark"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:id="@+id/doctor_phone_container"
@@ -132,6 +132,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/doctor_phone_image"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_marginTop="10dp"
@@ -173,6 +174,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/doctor_email_image"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_marginTop="10dp"
