change to linearlayout

--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -120,7 +120,7 @@
                 android:layout_marginBottom="5dp"
                 android:text="Contact Info:"
                 android:textColor="@color/colorTextTextDark"
-                android:textSize="18sp"
+                android:textSize="@dimen/title_size"
                 android:textStyle="bold" />
 
             <LinearLayout
