--- a/app/src/main/res/layout/activity_medicine.xml
+++ b/app/src/main/res/layout/activity_medicine.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
@@ -39,12 +40,12 @@
             >
 
             <ImageView
-                android:id="@+id/medicine_image"
+                android:id="@+id/medicine_image_iv"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:src="@color/cardview_shadow_start_color"
                 android:layout_marginBottom="8dp"
-                />
+                android:contentDescription="drug image"
+                android:src="@color/cardview_shadow_start_color" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -84,12 +85,36 @@
                         android:text="Ritalin Bla 30g"
                         />
 
+                    <EditText
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/et_medicine_name"
+                        android:visibility="gone"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Ritalin Bla 30g"
+                        />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:layout_marginStart="10dp"
                         android:id="@+id/medicine_type_text"
+                        android:textSize="24sp"
+                        android:textColor="@color/colorTextTextDark"
+                        android:text="pills"
+                        />
+
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="10dp"
+                        android:id="@+id/medicine_type_text_et"
+                        android:visibility="gone"
                         android:textSize="24sp"
                         android:textColor="@color/colorTextTextDark"
                         android:text="pills"
@@ -108,17 +133,7 @@
                     android:text="Should take after eating, before going to bad."
                     />
 
-                <EditText
-                    android:id="@+id/medicine_notes_et"
-                    android:textSize="18sp"
-                    android:textColor="@color/colorTextTextDark"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:hint="Notes, like should take it with food or not..."
-                    android:text="Should take after eating, before going to bad."
-                    android:visibility="gone"
-                    />
+
 
                 <View
                     android:id="@+id/medicine_divider_after_notes"
@@ -130,6 +145,7 @@
                     />
 
                 <LinearLayout
+                    android:id="@+id/schedule_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
