--- a/app/src/main/res/layout/activity_medicine_editor.xml
+++ b/app/src/main/res/layout/activity_medicine_editor.xml
@@ -305,80 +305,87 @@
             android:layout_height="wrap_content"
             android:text="End"
             android:textSize="@dimen/title_size" />
+
         <RadioGroup
             android:id="@+id/radio_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
+
                 <RadioButton
                     android:id="@+id/radio_never"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="onRadioButtonClicked"/>
+                    android:onClick="onRadioButtonClicked" />
+
                 <TextView
                     android:id="@+id/tv_never"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:text="never"
-                    android:textSize="@dimen/title_size"
-                    />
+                    android:textSize="@dimen/title_size" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <RadioButton
-                    android:id="@+id/radio_after_number_occurrence"
+                    android:id="@+id/radio_occurrence"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="onRadioButtonClicked"/>
+                    android:onClick="onRadioButtonClicked" />
+
                 <TextView
                     android:id="@+id/tv_title_after"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
-                    android:text="after"/>
+                    android:text="after" />
 
                 <EditText
                     android:id="@+id/et_number_occurrence"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="2"
-                    android:textSize="12sp"
                     android:inputType="number"
-                    android:text="2" />
+                    android:text="2"
+                    android:textSize="12sp" />
+
+
+
                 <TextView
                     android:id="@+id/tv_title_end_occurrence"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
-                    android:text="occurrence"/>
+                    android:text="occurrence" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
+
                 <RadioButton
-                    android:id="@+id/radio_custom_day"
+                    android:id="@+id/radio_custom"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="onRadioButtonClicked"/>
+                    android:onClick="onRadioButtonClicked" />
+
                 <TextView
                     android:id="@+id/tv_date_picker"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:text="01/09/2019" />
-
             </LinearLayout>
-
-
-
 
 
         </RadioGroup>
